sass/main.scss
/* ... */
/* theme toggle
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */

#theme-toggle {
  .sun-icon {
    display: none;
  }
}

body.dark #theme-toggle {
  .sun-icon {
    display: initial;
  }
  .moon-icon {
    display: none;
  }
}

/* homepage
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */

body.homepage {
  #wrapper {
    min-height: 100vh;
    min-height: 100dvh;
    max-width: var(--homepage-max-width);
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
  }

  main {
    width: 100%;
    min-height: 75vh;
    min-height: 75dvh;
    padding: 4em 0;
    @media (max-width: 425px) {
      & {
        padding: 2em 0;
      }
    }
  }

  #info {
    padding: 0 15px;
    display: flex;
    align-items: center;
    gap: 1em;

    img {
      height: var(--avatar-size);
      width: var(--avatar-size);
      border-radius: 50%;
    }

    #text {
      display: flex;
      flex-direction: column;
      justify-content: space-around;
      line-height: 1.5;
      font-size: 2.5rem;
      font-weight: bolder;
      gap: 1em;
    }

    img + #text {
        gap: 0.75em;
    }

    #id {
      color: var(--primary-color);
    }

    #bio {
      font-size: 2rem;
      color: var(--text-pale-color);
    }
  }

  #links {
    padding: 0 15px;
    margin: 2em 0 2.5em;
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    gap: 1em;

    a,
    button {
      -webkit-tap-highlight-color: transparent;
      text-decoration: none;
      line-height: 0;
      color: var(--text-color);

      &:hover {
        color: var(--primary-color);
      }
    }

    #left {
      display: flex;
      flex-wrap: wrap;
      gap: 1em;

      a {
        border-bottom: 1.5px solid var(--primary-color);
        line-height: 1.5;
      }
    }

    #right {
      display: flex;
      gap: 0.7em;

      button {
        padding: 0;
        border: none;
        background-color: transparent;
        cursor: pointer;
      }
    }

    @media (max-width: 425px) {
      #left {
        gap: 0.75em;
      }
      #right {
        gap: 0.5em;
      }
    }
  }

  #brief {
    padding: 0 15px;
  }
}

/* header
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */

header {
  font-size: 0.8em;
  padding: 0 15px;
  a {
    -webkit-tap-highlight-color: transparent;
    display: inline-block;
    margin-top: 1em;
    padding: 1em 1em 1em 0;
    color: var(--text-pale-color);
    text-decoration: none;
    &:hover {
      color: var(--primary-color);
    }
  }
}

.section-title {
  padding: 0 15px;
  h1 {
    font-size: 3.5rem;
  }
  p {
    margin: 0;
    margin-bottom: 1em;
    font-size: 0.9em;
    color: var(--text-pale-color);
  }
}

/* rss mask
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */

dialog#rss-mask {
  margin: 0 auto;
  padding: 0px;
  border: none;
  overflow: visible;
  background: transparent;

  &::backdrop {
    background-color: initial;
    backdrop-filter: blur(16px);
    -webkit-backdrop-filter: blur(16px);
  }

  div {
    pointer-events: none;
    height: 100vh;
    height: 100dvh;
    padding: 2em 0;
    width: fit-content;
    display: flex;
    justify-content: center;
    align-items: end;
    flex-wrap: wrap;
    gap: 1em;
    font-size: 0.9em;
  }

  a {
    pointer-events: auto;
    border-bottom: 1.5px solid var(--primary-color);
    color: var(--primary-color);
    text-decoration: none;
    line-height: 1.5;
    line-break: anywhere;
  }

  button {
    pointer-events: auto;
    background: transparent;
    border: none;
    color: var(--text-pale-color);
    padding: 0;
    cursor: pointer;
    &.copied, &:hover {
      color: var(--primary-color);
    }
  }
}

/* footer
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */

footer {
  font-size: 0.8em;
  line-height: 18px;
  margin-top: auto;
  padding: 15px;
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  gap: 0 0.5em;
  color: var(--text-pale-color);

  .left {
    margin: 15px 0;
    margin-right: auto;
    display: flex;
    align-items: center;
    span {
      padding: 0 0.5em;
    }
    a {
      color: var(--text-pale-color);
      text-decoration: none;
      text-underline-offset: 4px;
      &:hover {
        color: var(--text-pale-color);
        text-decoration: underline;
      }
    }
  }

  .right {
    display: flex;
    align-items: center;
    gap: 4px;
    margin: 11px 0;

    #rss-btn,
    #theme-toggle {
      -webkit-tap-highlight-color: transparent;
      border: none;
      background-color: transparent;
      text-decoration: none;
      cursor: pointer;
      color: var(--text-pale-color);
      &:hover {
        color: var(--primary-color);
      }
    }

    #rss-btn {
      padding: 4px 0;
      font-size: 0.85em;
      line-height: 18px;
    }
    #theme-toggle {
      padding: 4px;
      transform: translateX(6px);
      svg {
        scale: 0.7;
      }
      line-height: 0;
    }
  }
}

/* blog page
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */

body.blog {
  #wrapper {
    margin: 0 auto;
    max-width: var(--main-max-width);
    min-height: 100vh;
    min-height: 100dvh;
    display: flex;
    flex-direction: column;
  }

  main {
    margin: 1em 0;
  }
}
/* ... */

